--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et dolore magna aliqua.
       </p>
-      <a href="/table.html">Go to other page</a>
+      <a href="guppyServer/table.html">Go to other page</a>
     </main>
   </body>
   <script src="swup.min.js"></script>
