--- a/table.html
+++ b/table.html
@@ -1,12 +1,18 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guppy</title>
-  <link rel="icon" type="image/x-icon" href="favicon_1.ico">
-  <link rel="stylesheet" href="/table/styles.css">
-</head>
-
+  <link rel="stylesheet" href="styles2.css">
+  </head>
+  <body>
+    <!-- define the wrapper and the container -->
+    <div data-barba="wrapper">
+      <div data-barba="container" data-barba-namespace="page-a">
+          <a href="/">Back</a>
+	  <script type="text/javascript"> socket.send(JSON.stringify({"type": "3"}; </script>
 <div id="container" class="container">
 	
 	<div class="table">
@@ -16,17 +22,11 @@
 			<div class="header__item"><a id="password" class="filter__link filter__link--number" href="#">Password</a></div>
 		</div>
 		<div class="table-content">	
-			<div class="table-row">		
-				<div class="table-data">Winline</div>
-				<div class="table-data">tzeentach</div>
-				<div class="table-data">seth1092</div>
-			</div>
-			<div class="table-row">
-				<div class="table-data">Dick</div>
-				<div class="table-data">1</div>
-				<div class="table-data">1</div>
-			</div>
 		</div>	
 	</div>
 </div>
-<script type="text/javascript" src="table/table.js"></script>
+      </div>
+    </div>
+  </body>
+<script type="text/javascript"> location.href="/"; </script>
+</html>
